--- a/css/style.css
+++ b/css/style.css
@@ -73,12 +73,13 @@ body {
   font-size: 1.2rem;
 }
 
-#all:hover, #online:hover, #offline:hover {
-  text-shadow: 6px 6px 2px #000000;
+#all h1:hover, #online h1:hover, #offline h1:hover {
+  border-bottom: 1px dashed white;
+  cursor: pointer;
 }
 
-.selector-selected {
-  text-shadow: 6px 6px 2px #000000;
+.selector-selected h1 {
+  border-bottom: 1px solid white;
 }
 
 .horizontal-bar {
@@ -132,7 +133,6 @@ width: 100%;
   margin-top: 15px;
 }
 
-
 #blast {
   position: absolute;
   text-align: center;
@@ -170,4 +170,36 @@ width: 100%;
 
 #add-button:hover {
   cursor:pointer;
+}
+
+img {
+  background-color: #fff;
+  border-radius: 50px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+img:after {
+  content: "";
+  border-radius: 50px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+img:hover {
+  -webkit-transform: scale(1.15, 1.15);
+  transform: scale(1.15, 1.15);
+}
+
+img:hover:after {
+    opacity: 1;
 }
